# ScreenPrompt

screenprompt-tauri/: package-lock.json  package.json
screenprompt-tauri/src-tauri/: Cargo.toml  tauri.conf.json
screenprompt-tauri/src-tauri/src/: lib.rs  macos_api.rs
