[package]
name = "screenprompt"
version = "1.1.0"
description = "Transparent overlay excluded from screen capture"
authors = ["ScreenPrompt Contributors"]
license = "MIT"
repository = "https://github.com/dan0dev/ScreenPrompt"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = ["macos-private-api"] }
tauri-plugin-log = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

